# DTO/AccountDTO.cs
@@ -2,7 +2,6 @@
 {
     public class AccountDTO
     {
-        public string AccountName { get; set; }
 
         public string Password { get; set; }
 
