# bin/Release/net6.0/swagger.json
@@ -947,6 +947,98 @@
         ]
       }
     },
+    "/Statistical/TotalOfAccount": {
+      "get": {
+        "tags": [
+          "Statistical"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [ ]
+          }
+        ]
+      }
+    },
+    "/Statistical/TotalOfSubAccount": {
+      "get": {
+        "tags": [
+          "Statistical"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [ ]
+          }
+        ]
+      }
+    },
+    "/Statistical/TotalOfHistory": {
+      "get": {
+        "tags": [
+          "Statistical"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [ ]
+          }
+        ]
+      }
+    },
+    "/Statistical/TotalOfCar": {
+      "get": {
+        "tags": [
+          "Statistical"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [ ]
+          }
+        ]
+      }
+    },
     "/SubAccount/Get": {
       "get": {
         "tags": [
@@ -1030,6 +1122,35 @@
         }
       }
     },
+    "/SubAccount/GetByPhone/{id}": {
+      "get": {
+        "tags": [
+          "SubAccount"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
     "/SubAccount/Create": {
       "post": {
         "tags": [
@@ -1093,8 +1214,19 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [ ]
+          }
+        ]
       }
     },
     "/SubAccount/Delete/{id}": {
@@ -1114,8 +1246,19 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [ ]
+          }
+        ]
       }
     },
     "/WeatherForecast": {
@@ -1214,9 +1357,6 @@
     "AccountDTO": {
       "type": "object",
       "properties": {
-        "accountName": {
-          "type": "string"
-        },
         "password": {
           "type": "string"
         },
